tests/rosetta/out/Kotlin/24-game.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/24-game.mochi:23:3: unexpected token "}" (expected PostfixExpr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/24-game.mochi:23:3

 23 |   }
    |   ^

help:
  Parse error occurred. Check syntax near this location.